// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderWidth properly applies a value when passed only one 1`] = `Object {}`;

exports[`borderWidth properly applies values when passed four 1`] = `Object {}`;

exports[`borderWidth properly applies values when passed three 1`] = `Object {}`;

exports[`borderWidth properly applies values when passed two 1`] = `Object {}`;

exports[`borderWidth throws a warning when passed too many parameters 1`] = `
Array [
  Array [
    "%c ✨ WARNING ✨ ---- shorthands/borderWidth.js --%c

borderWidth %cexpects a maximum of %c1 parameter%c. However, you passed %c5 parameters%c. These additional parameters were ignored.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#borderWidth%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: green",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: goldenrod",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`borderWidth throws an error for each invalid value 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- shorthands/borderWidth.js --%c

borderWidth %cexpects a %c1st parameter%c(%cfirstWidth %c:%c cssMeasure%c). However, you passed (%c'top' %c:%c string%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#borderWidth%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
  Array [
    "%c ✨ ERROR ✨ ---- shorthands/borderWidth.js --%c

borderWidth %cexpects a %c2nd parameter%c(%csecondWidth %c:%c cssMeasure%c). However, you passed (%c'right' %c:%c string%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#borderWidth%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
  Array [
    "%c ✨ ERROR ✨ ---- shorthands/borderWidth.js --%c

borderWidth %cexpects a %c3rd parameter%c(%cthirdWidth %c:%c cssMeasure%c). However, you passed (%c'bottom' %c:%c string%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#borderWidth%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
  Array [
    "%c ✨ ERROR ✨ ---- shorthands/borderWidth.js --%c

borderWidth %cexpects a %c4th parameter%c(%cfourthWidth %c:%c cssMeasure%c). However, you passed (%c'left' %c:%c string%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#borderWidth%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
  Array [
    "%c ✨ ERROR ✨ ---- shorthands/borderWidth.js --%c

borderWidth %cexpects a %cparameter%c(%cundefined %c:%c undefined%c). However, you passed (%c'top' %c:%c string%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#borderWidth%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;
